FIx text alignment in spotify policy message

--- a/src/app/journey/countries-stats/countries-stats.component.scss
+++ b/src/app/journey/countries-stats/countries-stats.component.scss
@@ -63,6 +63,7 @@
 
 .spotify-policy-message {
   font-weight: bold;
+  text-align: center;
 }
 
 @media (min-width: 641px) and (max-width: 1280px) {
